crates/crucible-cli/src/tui/oil/tests/user_story_tests/snapshots/crucible_cli__tui__oil__tests__user_story_tests__resume_tests__resume_picker_frame_sequence.snap
---
source: crates/crucible-cli/src/tui/oil/tests/user_story_tests/resume_tests.rs
expression: story.sequence()
---
─── the picker waits for the daemon ───
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 ▸ Loading sessions...                                                          
                                                                                
 > /resume                                                                      
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 ASK  ...                                                                 — ctx

─── the list arrived ───
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 ▸ chat-2026-09-25T1501-2ecnzu  Fix the link parser · 2026-09-25 15:01          
   chat-2026-09-24T0930-k3m9qa  (untitled) · 2026-09-24 09:30                   
                                                                                
 > /resume                                                                      
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 ASK  ...                                                                 — ctx

─── the choice closed the picker ───










▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 >                                                                              
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 ASK  ...                                                                 — ctx
